tests/fail/smart_ptr_from_stack.tk
// tests/fail/fail_smart_ptr_from_stack.tk

fn main() {
    auto a = 32
    
    // 1. Illegal unique pointer from stack variable
    // EXPECT: Smart pointer sigil '^' cannot be applied to stack variable; use 'new' or assign from existing smart pointer
    auto ^p1 = ^a
    
    // 2. Illegal shared pointer from stack variable
    // EXPECT: Smart pointer sigil '~' cannot be applied to stack variable; use 'new' or assign from existing smart pointer
    auto ~p2 = ~a
    
    // 3. raw pointer from stack variable is legal
    auto *p3 = *a
    
    // 4. Illegal smart pointer cast
    // EXPECT: Smart pointer sigil '^' cannot be applied to stack variable; use 'new' or assign from existing smart pointer
    auto ^p4 = (a as Addr) as ^i32

    return
}
